-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.11.0
-
b799e061a3cbf995ac7c88b315f5916e3a687162
The db.changeVersion function does not update the db.version field, so it's not possible to perform successive schema updates like this:
if(db.version == "1") db.changeVersion("1, "2", ...)
if(db.version == "2") db.changeVersion("2, "3", ...)
There are possible workarounds, as described here: https://stackoverflow.com/questions/18052225/db-changeversion-doesnt-work-as-expected
The test suite seems to be written with this limitation in mind, and the database is reopened after each schema change. The documentation doesn't mention that this should be required.
To reproduce this, just take the changeversion.js test script and remove all openDatabaseSync calls except for the first one.
For Gerrit Dashboard: QTBUG-71838 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
246124,3 | LocalStorage: Return new version of DB from changeVersion() | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |