LocalStorage: Return new version of DB from changeVersion()

This is probably what you want if you change the version of the
database. Without this, you need to reopen the connection, which makes
the code ugly.

Fixes: QTBUG-71838
Change-Id: I6f1e118ba8e102d1043c4658d036c144bbde7229
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>