tests/auto/qml/qqmlsqldatabase/tst_qqmlsqldatabase.cpp
@@ -63,6 +63,7 @@ private slots:
     void testQml_cleanopen_data();
     void testQml_cleanopen();
     void totalDatabases();
+    void upgradeDatabase();
 
     void cleanupTestCase();
 
@@ -198,6 +199,22 @@ void tst_qqmlsqldatabase::totalDatabases()
         QSKIP("offlineStoragePath is empty, skip this test.");
 
     QCOMPARE(QDir(dbDir()+"/Databases").entryInfoList(QDir::Files|QDir::NoDotAndDotDot).count(), total_databases_created_by_tests*2);
+}
+
+void tst_qqmlsqldatabase::upgradeDatabase()
+{
+    QQmlComponent component(engine, testFile("changeVersion.qml"));
+    QVERIFY(component.isReady());
+
+    QObject *object = component.create();
+    QVERIFY(object);
+    QVERIFY(object->property("version").toString().isEmpty());
+
+    QVERIFY(QMetaObject::invokeMethod(object, "create"));
+    QCOMPARE(object->property("version").toString(), QLatin1String("2"));
+
+    QVERIFY(QMetaObject::invokeMethod(object, "upgrade"));
+    QCOMPARE(object->property("version").toString(), QLatin1String("22"));
 }
 
 QTEST_MAIN(tst_qqmlsqldatabase)
